<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/sell_image_content_description"
        android:rotation="180"
        android:src="@drawable/ic_circle_arrow_down_solid"
        app:tint="@color/red" />

    <TextView
        style="@style/Widget.App.Text.SellReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sell" />

    <EditText
        android:id="@+id/sell_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:digits="0123456789."
        android:hint="@string/sell_edit_text_hint"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        tools:ignore="Autofill"
        tools:text="100.00" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sell_currency"
        style="@style/Widget.App.CurrencyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        tools:text="EUR" />

</LinearLayout>
